hphp/hack/test/typecheck/dynamic_calls/builtins2.php.exp
File "builtins2.php", line 7, characters 38-49:
Invalid argument (Typing[4110])
  File "dyn_func_pointers.hhi", line 13, characters 24-29:
  Expected `string`
  File "dyn_func_pointers.hhi", line 13, characters 46-52:
  But got `dynamic`
